<package>
  <name>hrl_lib</name>
  <version>0.0.0</version>
  <description>hrl_lib</description>
  <maintainer email="phillip.grice@gatech.edu">Phillip GRice</maintainer>
  <license>New BSD</license>

  <url type="website"></url>

  <author>Cressel Anderson</author>
  <author>Travis Deyle</author>
  <author>Advait Jain</author>
  <author>Hai Nguyen</author>
  <author>Advisor: Prof. Charlie Kemp</author>
  <author>Lab: Healthcare Robotics Lab at Georgia Tech</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>hrl_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>hrl_msgs</run_depend>

</package>
